Fixed menu arrows on small resolutions.

--- a/css/webots-doc.css
+++ b/css/webots-doc.css
@@ -29,7 +29,7 @@
   top: 0;
 }
 .webots-doc #navigation {
-  margin: 0 2.5em 0;
+  margin: auto;
 }
 .webots-doc #title {
   margin-top: 0px;
@@ -54,14 +54,9 @@
   padding: 0;
 }
 .webots-doc #navigation > table {
-  width: 100%;
   text-align: center;
-  table-layout: fixed;
   font-size: 20px;
-  margin-top: 0.5em;
-  margin-bottom: 0;
-  padding-top: 0;
-  padding-bottom: 0;
+  margin: 0em auto 0 auto;
 }
 .webots-doc #accordion li a,
 .webots-doc #accordion li ul li a {
